# mgattozzi

./: .env  .gitignore  .gitmodules  .snyk  Cargo.toml  README.md  Rocket.toml  Site.toml  keybase.txt  package.json  rss-rust.xml  rss.xml  webpack.config.js  webpack.config.js.dev  webpack.production.config.js
_pages/: about.md  archive.md  contact.md
_pages/posts/: 2016-03-20-schrodingers-bug.md  2016-05-05-announcing-alchemist.md  2016-05-26-how-do-i-str-string.md  2016-06-01-how-do-i-std-macros.md  2016-08-30-1-year-of-rust.md  2016-09-13-understanding-where-clauses.md  2016-09-27-blog-about-rust.md  2016-10-01-haskell-rust.md  2016-10-15-rust-haskell.md  2016-11-08-scheme-input.md  2016-11-09-scheme-ex1.md  2016-11-17-scheme-error.md  haskell-rust.md  rust-haskell.md  (+4 more)
_posts/: 2016-03-20-schrodingers-bug.md  2016-05-05-announcing-alchemist.md  2016-05-26-how-do-i-str-string.md  2016-06-01-how-do-i-std-macros.md  2016-08-30-1-year-of-rust.md  2016-09-13-understanding-where-clauses.md  2016-09-27-blog-about-rust.md  2016-10-01-haskell-rust.md  2016-10-15-rust-haskell.md  2016-11-08-scheme-input.md  2016-11-09-scheme-ex1.md
_sass/: styles.scss
includes/: body.html  footer.html  head.html  header.html  post.html
less/: main.less
pages/: archive.md  contact.md  index.md  resume.md
posts/: 1-year-of-rust.md  2017-retrospective.md  announcing-alchemist.md  avoiding-logic-errors.md  blog-about-rust.md  depression-coding.md  diesel-powered-rocket.md  executable-wasm.md  global-uninitialized.md  haskell-rust.md  how-do-i-std-macros.md  how-do-i-str-string.md  hyper-async.md  hyper-client.md  pipers.md  refactor-rust.md  rndr.md  russian-dolls.md  rust-haskell.md  rust-is.md  rust-reach-kickoff.md  rust-wasm.md  scheme-ex1.md  scheme-input.md  scheme-parser.md  schrodingers-bug.md  understanding-where-clauses.md  words-are-power.md
sass/: main.scss
site/: index.html
src/: config.rs  css.rs  lib.rs  main.rs  md.rs  models.rs  mount_site.rs  sass.rs  update.rs  util.rs
templates/: about.tera  archive.tera  base.tera  contact.tera  counting.tera  index.tera  post.md  post.tera  resume.tera
(+56 files in other folders)
