[package]
name = "mgattozzi"
version = "1.0.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]

[[bin]]
name = "mgattozzi"
path = "src/bin/main.rs"

[lib]
name = "mlib"
path = "src/lib.rs"

[dependencies]
# Rocket Server Deps
rocket = "*"
rocket_codegen = "*"
rocket_contrib = "*"

# JSON Deps
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"

# DB Deps
diesel = { version = "~0.9.0", features = ["postgres"] }
diesel_codegen = { version = "~0.9.0", features = ["postgres"] }
dotenv = "~0.8.0"
r2d2 = "~0.7.1"
r2d2-diesel = "~0.9.0"
lazy_static = "~0.1.0"
