[package]
name = "mgattozzi"
version = "1.0.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]

[[bin]]
name = "mgattozzi"
path = "src/bin/main.rs"

[lib]
name = "mlib"
path = "src/lib.rs"

[dependencies]
# Rocket Server Deps
rocket = "0.3"
rocket_codegen = "0.3"

# Templating
tera = "0.10"

# Markdown
comrak = "0.1"

# JSON Deps
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

# DB Deps
diesel = { version = "~0.9.0", features = ["postgres"] }
diesel_codegen = { version = "~0.9.0", features = ["postgres"] }
dotenv = "~0.8.0"
r2d2 = "~0.7.1"
r2d2-diesel = "~0.9.0"
lazy_static = "~0.1.0"

[dependencies.rocket_contrib]
version = "0.3"
default-features = false
features = ["tera_templates", "json"]
