[package]
name = "mgattozzi"
version = "1.0.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]

[[bin]]
name = "mgattozzi"
path = "src/bin/main.rs"

# [lib]
# name = "mlib"
# path = "src/lib.rs"

[dependencies]
# Rocket Server Deps
rocket = "*"
rocket_codegen = "*"

# Templating
tera = "*"

# Markdown
comrak = "*"

# JSON Deps
serde = "*"
serde_json = "*"
serde_derive = "*"

# DB Deps
# Disabling till nightly isn't borked
#diesel = { version = "*", features = ["postgres"] }
#diesel_codegen = { version = "*", features = ["postgres"] }
#dotenv = "*"
#r2d2 = "*"
#r2d2-diesel = "*"
#lazy_static = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates", "json"]
